# code-server-blueprint

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
