[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Thorben Jensen <jensen.thorben@posteo.net>"]

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
